k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qrmethis
  namespace: qrmethis
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: qrmethis
  template:
    metadata:
      labels:
        app: qrmethis
    spec:
      containers:
        - name: qrmethis
          image: houseofmoran/qrmethis:0.1.1
          resources:
            limits:
              memory: 15Mi
            requests:
              memory: 0.5Mi
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /foop
              port: 8000
            initialDelaySeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /foop
              port: 8000
            initialDelaySeconds: 10
            timeoutSeconds: 1
