k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qrmethis-ingress
  namespace: qrmethis
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - qrmethis.do.houseofmoran.io
      secretName: letsencrypt-cert-prod
  rules:
    - host: qrmethis.do.houseofmoran.io
      http:
        paths:
          - path: /
            backend:
              serviceName: qrmethis-service
              servicePort: 80
